# dijet_rdf

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  test_input.txt
condor/script/: J4P_skim.sh
condor/submission/: J4P_skim.sub
configs/: empty_conf.ini  submit_config.sub  submit_script.sh  test_args.sh  testconf.txt  testconf_23D.txt  testconf_MC.txt
data/: EGM_histograms.ini  EGM_triggers.txt  EGM_triggers_24.txt  JME_histograms.ini  JME_triggers.txt  JME_triggers_old.txt  JME_triggers_skim.txt  JME_triggers_tag.txt  ZB_trigger.txt  ZB_triggers.txt  ZJET_histograms.ini  ZJET_triggers.txt  histconf.txt  histograms.ini  lumi.csv  range_input.txt  ratioconf.txt  testcorrections.txt  testfiles.txt  testfiles23D.txt  testfiles_skim.txt  testfiles_skim_mc.txt  testtrgconf.txt  testtrgconf_PFJet550.txt  testtrigger.txt  testtrigger_skim.txt
data/MC_24/: GJ-4Jets_HT-100to200_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_HT-600_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_HT-70to100_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-1000to1200_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-100to200_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-2000_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-200to400_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-400to600_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-40to70_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-70to100_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  QCD-4Jets_HT-800to1000_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  bad_files.txt
data/MC_Summer24/: DYto2Mu-2Jets_Bin-MLL-50_TuneCP5_13p6TeV_amcatnloFXFX-pythia8.txt  DYto2Mu-4Jets_Bin-MLL-50_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-1000-PTG-100to200_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-1000-PTG-10to100_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-1000-PTG-200_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-100to200-PTG-10to100_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-200to400-PTG-100to200_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-200to400-PTG-10to100_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-400to600-PTG-100to200_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-400to600-PTG-10to100_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  GJ-4Jets_Bin-HT-400to600-PTG-200_Par-dRGJ-0p25_TuneCP5_13p6TeV_madgraphMLM-pythia8.txt  (+17 more)
src/: JECRDF_code.h  JETVETOMAPS_code.h  JSONRDF_code.h  RDFAnalyzer.py  RDFHelpers.py  README.md  VetomapProducer.py  analysis.py  bins.py  cumulative.py  dijet.py  filewriter.py  find_json.py  find_newest.py  find_range.py  histograms.py  main.py  make_JEC.py  processing_utils.py  produce_ratio.py  produce_responses.py  produce_time_evolution.py  produce_vetomaps.py  skim.py  skimming_utils.py
test/: test_dijet_skim.sh  test_egamma_skim.sh  test_multijet_skim.sh  test_photonjet_skim.sh  test_zee_skim.sh  test_zmm_skim.sh
tests/: conftest.py  run_all_tests.sh  test_dials.sh  test_dijet_skim.sh  test_multijet_skim.sh  test_photonjet_skim.sh  test_skim.py  test_summer23_dijet.sh  test_zee_skim.sh  test_zmm_skim.sh
(+199 files in other folders)
