[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jec4prompt"
version = "2025.0.0"
description = "A Python package for RDF-based analysis of NanoAOD data"
authors = [
    { name = "Nico Toikka", email = "nico.timothy.toikka@cern.ch" },
    { name = "Dan Näsman" }
]
dependencies = [
    "numpy",
    "pandas",
    "uproot",
    "mplhep",
    "correctionlib",
    "requests"
]
requires-python = ">= 3.9"

[project.scripts]
j4p-main = "src:jec4prompt:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]