[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jec4prompt"
version = "2025.0.0"
description = "A Python toolkit for RDF-based analysis of CMS NanoAOD data"
readme = "README.md"
authors = [
    { name = "Nico Toikka", email = "nico.timothy.toikka@cern.ch" },
    { name = "Dan Näsman" }
]
maintainers = [
    { name = "Nico Toikka", email = "nico.timothy.toikka@cern.ch" }
]
dependencies = [
    "numpy",
    "pandas",
    "uproot",
    "mplhep",
    "correctionlib",
    "requests"
]
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: C++",
]

[project.scripts]
j4p-main = "src:jec4prompt:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.black]
line-length = 88  # Default is 88, change if needed
target-version = ['py38', 'py39', 'py310', 'py311']  # Adjust based on your Python version
skip-string-normalization = false  
include = '\.pyi?$'

[tool.ruff]
line-length = 88  
target-version = "py39"  # Adjust for your Python version
select = ["E", "F", "W", "I", "C90"]  
fixable = ["ALL"]  # Allow Ruff to auto-fix everything

[tool.ruff.lint]
ignore = ["E501"]  # Ignore line length errors (handled by Black)
extend-select = ["B", "C", "Q", "SIM"]  # Add more rules (optional)

[tool.isort]
profile = "black"  # Ensures compatibility with Black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = true